<resources>
    <string name="app_name">MovieApps</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="hint_password_sign_in">Tamvan123</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Welcome, </string>
    <string name="selamat_datang_value">Fauzi Riski</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="name_profile">Angga Risky</string>
    <string name="wallet_profile">IDR 280.000</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="detail_title">Avengers: Infinity War</string>
    <string name="detail_genre">Action, Sci-fi, Kids</string>
    <string name="detail_rating">9.7</string>
    <string name="storyboard">Storyboard</string>
    <string name="detail_storyboard">The Avengers must stop Thanos, a mad Titan, and his  army from getting their hands on all the infinity stones.  However, the mad Titan is prepared to go to any lengths  to carry out his insane plan.</string>
    <string name="detail_actors">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="movie_title">Alita Battle</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="status_booked">Booked</string>
    <string name="status_empty">Empty</string>
    <string name="status_selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="time_checkout">12 Aug, 10 AM</string>
    <string name="cinema">Cinema</string>
    <string name="cinema_desc">Depok Mall, Cinema 3</string>
    <string name="seat">Seat No. C1</string>
    <string name="seat_pay">IDR 70.000</string>
    <string name="subtotal">Total Harus Dibayar</string>
    <string name="subtotal_desc">IDR 140.000</string>
    <string name="Items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_pay">Total Balance</string>
    <string name="total_pay_desc">IDR 200.000</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_wallet_saldo">IDR 280.000</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="history_count">2,409 Movies</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="desc_success">Tiket telah berhasil dibeli dan selamat menikmati film</string>
    <string name="lihat_tiket">LIHAT TIKET</string>
    <string name="home">HOME</string>
</resources>